// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentBuilder should throw error for invalid metadata values 1`] = `
"
The following field names are still invalid after transformation:
  • f-o=o --> f-o=o
  • <buzz> --> <buzz>

Field names can only contain lowercase letters (a-z), numbers (0-9), and underscores. Field names must be at least one character long and must start with a lowercase letter.
    "
`;

exports[`DocumentBuilder should throw error for invalid metadata values even after transformation 1`] = `
"
The following field names are still invalid after transformation:
  • f-o=o --> f*o*o
  • <buzz> --> *buzz*

Field names can only contain lowercase letters (a-z), numbers (0-9), and underscores. Field names must be at least one character long and must start with a lowercase letter.
    "
`;

exports[`DocumentBuilder when combining multiple permission sets should marshal permission level 1`] = `
[
  {
    "name": "level1",
    "permissionSets": [
      {
        "allowAnonymous": true,
        "allowedPermissions": [],
        "deniedPermissions": [
          {
            "identity": "asmith@example.com",
            "identityType": "User",
            "securityProvider": "Email Security Provider",
          },
        ],
      },
      {
        "allowAnonymous": false,
        "allowedPermissions": [
          {
            "identity": "SampleTeam1",
            "identityType": "Group",
          },
          {
            "identity": "emitchell@example.com",
            "identityType": "User",
            "securityProvider": "Email Security Provider",
          },
        ],
        "deniedPermissions": [],
      },
    ],
  },
  {
    "name": "level2",
    "permissionSets": [
      {
        "allowAnonymous": false,
        "allowedPermissions": [
          {
            "identity": "MysteryUserX",
            "identityType": "User",
            "securityProvider": "Email Security Provider",
          },
        ],
        "deniedPermissions": [
          {
            "identity": "SampleGroup",
            "identityType": "VirtualGroup",
          },
        ],
      },
    ],
  },
]
`;
